<resources >
    <string name="app_name">SMS Delay Sender</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="address_name_please">Please enter your name and address</string>
    <string name="send">SEND</string>
    <string name="user_address">Your address</string>
    <string name="number_list_sms">Numbers to be messaged</string>
    <string name="number_list_call">Numbers to be called</string>
    <string name="start">START SECURITY</string>
    <string name="enter_password">Password</string>
    <string name="stop_alarm">STOP THE BLOODY ALARM</string>
    <string name="help">HELP</string>

    <color name="red">#E32636</color>

    <string name="emails_list">Addresses to be emailed</string>
     <string name="ok">OK</string>
    <string name="time_sms">Time till the sms and email contacts are notified (all at once)</string>
    <string name="time_call">Time till the emergency contacts are called in order of priority</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Select a password</string>
    <string name="reset">RESET</string>
    <string name="time_info">Adjust the slider bars to change the time from 0 seconds upto 300 seconds</string>
    <string name="priority_order">Please list the contact information in order. From high priority (first) to low priority (last)</string>
    <string name="numbers_list">In case of an emergency:</string>
    <string name="title_activity_lock_wndow">LockWndow</string>
    <string name="title_activity_parameters_to_pass">ParametersToPass</string>
    <string name="set_pass">SET</string>
    <string name="setting_done">Done</string>
    <string name="alarm_handler">alarm_handler</string>
    <string name="title_activity_settings">settings</string>
    <string name="name_full">Your full name</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="et">Earphone Trigger</string>
    <string name="what_is_this_message">What is this message? This is an auto-generated message from the android security app WatchME. The likelihood of this being false alarm is completely dependant on the user\'s sensitivity settings. For the app to fulfil it\'s purpose the users should be made aware of it if they are sending out false alarms all the time. Please don\'t stop responding to such alerts just because one user is spamming you all the time.</string>
    <string name="disclaimer">The developers of WatchME are in no way responsible for any false alarms what soever. The likelihood of this being false alarm is completely dependant on the user\'s sensitivity settings. For the app to fulfil it\'s purpose the users should be made aware of it if they are sending out false alarms all the time.</string>

</resources>