<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/users_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_please"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/users_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_address"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingTop="12dp"
        android:text="@string/numbers_list"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contact_numbers_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_list_call"
        android:inputType="phone" />

    <EditText
        android:id="@+id/contact_numbers_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_list_sms"
        android:inputType="phone|number" />

    <EditText
        android:id="@+id/contact_emails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emails_list"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startSecurity"
        android:text="@string/start"
        android:textColor="#000000"
        android:textColorHighlight="#E32636" />
    
<!--     This wass added in a tutorial that I was following but I couldn't find a why they added it.. -->
<!--     http://www.compiletimeerror.com/2013/08/androidoptions-menu-in-android-example.html#.UzPWd5jJVyA -->
<!--     <TextView -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:layout_centerVertical="true" -->
<!--         android:text="Compiletimeerror.com : Android Tutorials" -->
<!--         tools:context=".MainActivity" /> -->
    

    <TextView
        android:id="@+id/priority_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_order"

        />

<!--         android:textSize="20"  -->
    
</LinearLayout>