<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

        <!-- android:layout_alignParentLeft="true" -->
        <!-- android:layout_alignParentTop="true" -->

<!--         <requestFocus /> -->
    <!-- android:layout_alignParentRight="true" -->
    <!-- android:layout_below="@+id/password_given" -->
    <!-- android:textSize="15" -->

    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:layout_below="@+id/password_given" -->

    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:layout_alignParentRight="true" -->

    <TextView
        android:id="@+id/call_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_call"
        android:textColor="#ffffff"
        android:textSize="15dp" />

    <!-- android:layout_above="@+id/call_progressbar" -->
    <!-- android:layout_alignParentLeft="true" -->

    <!-- android:layout_above="@+id/call_time" -->
    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:layout_alignParentRight="true" -->

    <ProgressBar
        android:id="@+id/call_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/sms_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sms"
        android:textColor="#ffffff"
        android:textSize="15dp" />

    <ProgressBar
        android:id="@+id/sms_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="#ffffff" />

    <!-- android:layout_above="@+id/sms_progress_bar" -->
    <!-- android:layout_alignParentLeft="true" -->

<!--     <EditText -->
<!--         android:id="@+id/password_given" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:ems="10" -->
<!--         android:hint="@string/enter_password" -->
<!--         android:inputType="textPassword" -->
<!--         android:visibility="invisible" /> -->

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:text="@string/help"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E32636"
        android:textSize="100dp" />

</LinearLayout>